--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@angular/material": "^20.2.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@ng-select/ng-select": "^20.1.3",
     "ngx-toastr": "^19.0.0",
     "ngx-webstorage": "^20.0.0",
+    "primeflex": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
